[AI] Seperated code
- Added test executable.
- Separated code in .h and .cpp file.
- Updated CMakeLists to handle this.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,16 @@ cmake_minimum_required(VERSION 3.15)
 # Project name
 project(8puzzle)
 
-# Specify the target executable name
+# Specify the target executable and library names
 set(TARGET_8PUZZLE 8puzzle)
+set(LIB_8PUZZLE 8puzzle_lib)
+set(TEST_8PUZZLE test_8puzzle)
 
 # Source files
-set(SRC_8PUZZLE uni-fmi/ai/8puzzle/main.cpp)
+set(SRC_8PUZZLE uni-fmi/ai/8puzzle/solution.cpp)
+set(MAIN_SRC uni-fmi/ai/8puzzle/main.cpp)
+set(TEST_SRC uni-fmi/ai/8puzzle/test.cpp)
+set(HEADER_8PUZZLE uni-fmi/ai/8puzzle/solution.h)
 
 # Find compilers
 find_program(CLANG_PATH clang++)
@@ -60,5 +65,17 @@ endif()
 # Check if the compiler was successfully set
 message(STATUS "Using compiler: ${CMAKE_CXX_COMPILER}")
 
-# Add the executable
-add_executable(${TARGET_8PUZZLE} ${SRC_8PUZZLE})
+# Add a library for the 8puzzle solution
+add_library(${LIB_8PUZZLE} STATIC ${SRC_8PUZZLE} ${HEADER_8PUZZLE})
+# If you want a shared library instead, replace STATIC with SHARED in the line above
+
+# Add include directories for the library
+target_include_directories(${LIB_8PUZZLE} PUBLIC uni-fmi/ai/8puzzle)
+
+# Add the main executable and link it with the 8puzzle library
+add_executable(${TARGET_8PUZZLE} ${MAIN_SRC})
+target_link_libraries(${TARGET_8PUZZLE} PRIVATE ${LIB_8PUZZLE})
+
+# Add the test executable and link it with the 8puzzle library
+add_executable(${TEST_8PUZZLE} ${TEST_SRC})
+target_link_libraries(${TEST_8PUZZLE} PRIVATE ${LIB_8PUZZLE})
